--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>evo-inflector</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.2.1-jre</version>
+        </dependency>
+
     </dependencies>
 
 </project>
